--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-md-7 text-center">
+        <div class="col-md-6 text-center bg-light p-5 rounded">
           <h1 class="mb-3">Login</h1>
           <form>
             <div class="mb-3">
