--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
                 id="exampleInputPassword1"
               />
             </div>
-            <button type="submit" class="btn btn-secondary">Login</button>
+            <div class="mt-4 d-grid">
+              <button type="submit" class="btn btn-block btn-secondary">
+                Login
+              </button>
+            </div>
           </form>
         </div>
       </div>
