add: login action php

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
       <div class="row justify-content-center">
         <div class="col-md-6 text-center bg-light p-5 rounded">
           <h1 class="mb-3">Login</h1>
-          <form>
+          <form action="./login_action.php" method="post">
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">User</label>
               <input
                 type="email"
                 class="form-control"
                 id="exampleInputEmail1"
-                aria-describedby="emailHelp"
+                name="email"
               />
             </div>
             <div class="mb-3">
@@ -45,6 +45,7 @@
                 type="password"
                 class="form-control"
                 id="exampleInputPassword1"
+                name="password"
               />
             </div>
             <div class="mt-4 d-grid">
