--- a/tabel.html
+++ b/tabel.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Hello, world!</title>
+    <title>Tabel</title>
     <style>
       .bg-blue {
         background-color: #78c6f0;
